# rust-block-reader

./: .gitignore  Cargo.toml  README.md
src/: block_number_op.rs  block_reader.rs  cli_args.rs  main.rs  merkle_root_op.rs  router.rs  rpc_call.rs  util.rs
src/router/: mod.rs
