[package]
name = "avail-block-reader-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avail-rust = { git = "https://github.com/availproject/avail" }
clap = { version = "4.5.23", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
zmq = "0.10.0"
