[package]
name = "avail-block-reader-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
zmq = "0.10.0"
dotenv = "0.15.0"
ethabi = "16.0.0"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
avail-rust-client = "0.4.0"
ethers = { version = "2.0", features = ["rustls"] }
